--- a/style.css
+++ b/style.css
@@ -1,22 +1,65 @@
-.container {
-    display: flex;
-    flex-wrap: wrap;
-  }
+body{
+  font-family: arial;
+}
+.fila{
+  display: flex;
+}
+.column-2{
+width: 100%;
+font-size: 30px;
 
-  .normal {
-    flex: 1;
-    background-color: #f1c40f;
-    margin: 1rem;
-    padding: 1rem;
-    box-sizing: border-box;
-    text-align: center;
+}
+.column-4{
+width: 50%;
+background-color: rgba(215, 210, 216, 0.179);
+padding: 40px; 
+font-size: 30px;
+}
+.column-5 {
+width: 50%;
+padding: 40px;
+font-size: 30px;
+background-color: rgb(201, 213, 213);
+}
+.column-8{
+width: 50%;
+background-color: rgb(234, 228, 220);
+padding: 40px;
+font-size: 30px;
+}
+.column-6{
+  width: 25%;
+  padding: 40px;
+  font-size: 30px;
+}
+.estilos{
+      border-style: solid;
+      border-width: 0px;
+      border-color: black;
   }
-
-  .reduced {
-    flex: 1;
-    background-color: #3498db;
-    margin: 0.5rem;
-    padding: 1rem;
-    box-sizing: border-box;
-    text-align: center;
-  }
+.titulo{
+  color: cadetblue;
+}
+.titulo2{
+  background-color: black;
+  color: white;
+}
+.letra1{
+  color: white;
+}
+body{
+  padding: 40px;
+  
+}
+img{
+  display: block;
+  margin: auto;
+  margin-top: 40px;
+  border-radius: 10px;
+}
+.letra3{
+  color: gray;
+}
+.margen{
+  margin-left: 35px;
+}
