--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,13 @@ body {
 
 .fila{
   display: flex;
+  clear: both;
 }
 
 .columna1 {
   width: 100%;
   font-size: 30px;
+  float: left;
 }
 
 .columna2 {
@@ -17,6 +19,7 @@ body {
   background-color: rgba(215, 210, 216, 0.179);
   padding: 40px;
   font-size: 30px;
+  float: left;
 }
 
 .columna4 {
@@ -24,6 +27,7 @@ body {
   padding: 40px;
   font-size: 30px;
   background-color: rgb(201, 213, 213);
+  float: left;
 }
 
 .columna3 {
@@ -31,12 +35,14 @@ body {
   background-color: rgb(234, 228, 220);
   padding: 40px;
   font-size: 30px;
+  float: left;
 }
 
 .columna5 {
   width: 25%;
   padding: 40px;
   font-size: 30px;
+  float: left;
 }
 
 .estilos {
